Listing all availablee databases in the _ingest/geoip/database API